--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+psycopg://zdravkobonev@localhost:5432/organization_db
+DATABASE_URL=postgresql+psycopg://zdravkobonev@localhost:5432/restaurant_db
 MAX_LOGIN_ATTEMPTS=3
 LOCKOUT_MINUTES=1
 SECRET_KEY=pxXzvBWeqyJ38Z2QmTYIfJDFl5Of9s47Cq76OmGhaPabqoM-Yfi_Rx8if7k25bXiK3FaDx_0GZcaxiljFBVarQ
